@@ -144,6 +144,13 @@ class Router(object):
                 attrs['exception'] = why
                 response = view_callable(why, request)
 
+            # process the response
+
+            if request.response_callbacks:
+                request._process_response_callbacks(response)
+
+            has_listeners and registry.notify(NewResponse(request, response))
+
             try:
                 headers = response.headerlist
                 app_iter = response.app_iter
@@ -152,12 +159,6 @@ class Router(object):
                 raise ValueError(
                     'Non-response object returned from view named %s '
                     '(and no renderer): %r' % (view_name, response))
-
-            if request.response_callbacks:
-                request._process_response_callbacks(response)
-
-            # process the response
-            has_listeners and registry.notify(NewResponse(request, response))
 
             start_response(status, headers)
             return app_iter
