@@ -1,3 +1,12 @@
+Next release
+============
+
+Big Fixes
+---------
+
+- Process the response callbacks and the NewResponse event earlier, to
+  enable mutations to the response to take effect.
+
 1.3a10 (2010-09-05)
 ===================
 
